force-app/main/default/objects/User/fields/Signed_Confidentiality_Agreement_on_File__c.field-meta.xml
<CustomField>
    <fullName>Signed_Confidentiality_Agreement_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce user has a Signed Confidentiality Agreement on File (SharePoint or Workday)</description>
    <inlineHelpText>Salesforce user has a Signed Confidentiality Agreement on File (SharePoint or Workday)</inlineHelpText>
    <label>Signed Confidentiality Agreement on File</label>
    <type>Checkbox</type>
</CustomField>