force-app/main/default/objects/User/fields/User_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Salesforce ID for user related contact record.</description>
    <inlineHelpText>Salesforce ID for user related contact record.</inlineHelpText>
    <label>User Contact ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>